[project]
name = "trader"
description = "T212 Python Library"
requires-python = ">=3.10"
authors = [{name = "davej23", email = "email@example.com"}]
license = {file = "LICENSE"}
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "pydantic>=2.0",
    "pydantic_extra_types>=2.0",
    "pycountry>=24.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
    "black>=24.3",
    "pylint>=3.1",
    "mypy>=1.9"
]

[tool.black]
line-length = 140

[tool.pytest.ini_options]
addopts = "--cov-config=.coveragerc --cov=trader"

[tool.setuptools.dynamic]
version = {attr = "trader.__version__"}

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"